Fix overflow.

--- a/theme/sidedoc.less
+++ b/theme/sidedoc.less
@@ -8,7 +8,7 @@
 
 /* Side Docs layout */
 #sidedocs {
-  overflow-y: none;
+  overflow: hidden;
   height:100%;
   top: 0;
   z-index: 10;
